--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,8 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.label :first_Name %><br>
+    <%= f.text_field :f_name %>
+  </div>
+  <div class="field">
+    <%= f.label :Last_Name %><br>
+    <%= f.text_field :l_name %>
   </div>
   <div class="field">
     <%= f.label :email %><br>
