--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,11 @@
+<div class="container sub_page">
 <h1>Listing users</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>First Name</th>
+      <th>Last Name</th>
       <th>Email</th>
       <th colspan="3"></th>
     </tr>
@@ -12,7 +14,8 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.name %></td>
+        <td><%= user.f_name %></td>
+        <td><%= user.l_name %></td>
         <td><%= user.email %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
@@ -25,3 +28,4 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
+</div>
