--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_for(@post) do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
@@ -18,7 +19,7 @@
     </div>
   <div class="field">
     <%= f.label :content %><br>
-    <%= f.text_field :content %>
+    <%= f.cktext_area :content %>
   </div>
   <div class="field">
     <%= f.label :user_id %><br>
@@ -28,3 +29,4 @@
     <%= f.submit %>
   </div>
 <% end %>
+<
