--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,13 +3,13 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Blog Home Two
-                    <small>Subheading</small>
+                <h1 class="page-header">Blog
+
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">Blog Home Two</li>
+                    <li class="active">Blog</li>
                 </ol>
             </div>
         </div>
@@ -32,7 +32,7 @@
                     <a href="blog-post.html"><%= post.title %></a>
                 </h3>
                 <p>by <a href="#"><%= post.user.f_name %> <%= post.user.l_name %> </a></p>
-                <p><%= post.content %></p>
+                <p><%= post.content.html_safe  %></p>
                 <%= link_to 'Show', post, class:"btn btn-lg btn-primary" %>
                 <td><%= link_to 'Edit', edit_post_path(post), class:"btn btn-lg btn-primary" %></td>
             </div>
