--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-    
+
 </head>
 <body>
 
@@ -14,6 +14,7 @@
 
 <%= yield %>
     <%= render 'layouts/footer' %>
+      <%= debug(params) if Rails.env.development? %>
 
 </body>
 </html>
