--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,20 +10,38 @@
       </ul>
     </div>
   <% end %>
+	<hr class="colorgraph">
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-6">
+					<div class="form-group">
+            <%= f.text_field :f_name ,class:"form-control input-lg", placeholder:"First Name" %>
+          </div>
+        </div>
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="form-group">
+              <%= f.text_field :l_name ,class:"form-control input-lg", placeholder:"Last Name"%>
+          </div>
+        </div>
+      </div>
+          <div class="form-group">
 
-  <div class="field">
-    <%= f.label :first_Name %><br>
-    <%= f.text_field :f_name %>
-  </div>
-  <div class="field">
-    <%= f.label :Last_Name %><br>
-    <%= f.text_field :l_name %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+            <%= f.text_field :email ,class:"form-control input-lg", placeholder:"Email Address" %>
+          </div>
+      <div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="form-group">
+              <%= f.password_field :password ,class:"form-control input-lg", placeholder:"Password"  %>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="form-group">
+
+              <%= f.password_field :password_confirmation ,class:"form-control input-lg", placeholder:"Confirm Password" %>
+          </div>
+        </div>
+      </div>
+        <hr class="colorgraph">
+			     <div class="row">
+            <%= f.submit "Create my account", class: "btn btn-primary btn-block btn-lg" %>
+        </div>
 <% end %>
