--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,11 @@
 <div class="container sub_page">
-<h1>New user</h1>
+  <div class="row">
+    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+    <h1>New user</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', users_path %>
+    <%= link_to 'Back', users_path %>
+  </div>
+</div>
 </div>
