--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,8 @@
 <div class="container sub_page">
 <p id="notice"><%= notice %></p>
 
+
+<%= gravatar_for @user %>
 <p>
   <strong>Name:</strong>
   <%= @user.f_name  %>   <%= @user.l_name  %>
